# ainews_podcast

./: .env.example  .gitmodules  README.md  credentials.json  gen_podcast.py  hello.py  main.py  pyproject.toml  test.py  token.json  uv.yml
data/: swix_newletter_iteration_06_12_2024.txt  swix_newletter_iteration_clean_06_12_2024(1).txt  swix_newletter_iteration_clean_06_12_2024.txt
tests/: test_clean_rss_item.py
tts/: tts_11labs.py
utils/: clean_data.py  get_data.py
